--- a/src/internet-shops.scss
+++ b/src/internet-shops.scss
@@ -195,6 +195,7 @@
       left: -5%;
       top: 30px;
       z-index: 2;
+      object-fit: contain;
     }
   }
 
@@ -249,6 +250,9 @@
     font-size: 20px;
     line-height: 160%;
     padding-top: 44px;
+  }
+  &-img {
+    object-fit: contain;
   }
 }
 
