--- a/src/internet-shops.scss
+++ b/src/internet-shops.scss
@@ -29,10 +29,6 @@
   padding: 0 16px;
 }
 
-html {
-  font-size: 14px;
-}
-
 .svg {
   &-sprites {
     position: absolute;
@@ -43,14 +39,18 @@ html {
 
   &-arrowBread {
     color: #BBBBBB;
-    width: 8px;
-    height: 7px;
-    margin: 0 25px 0 25px;
+    width: 1rem;
+    height: 0.9rem;
+    margin: 0 3.1rem 0 3.1rem;
   }
 
   &-arrow-slider {
     width: 24px;
     height: 24px;
+  }
+  &-resize-horizontal-round {
+    position: relative;
+    top: 15%;
   }
 }
 
@@ -62,12 +62,13 @@ html {
     color: $dark;
     padding-top: 32px;
     &-header {
-      font-size: 5rem;
+      font-size: 8.75rem;
       line-height: 1;
     }
 
     &-block {
       display: flex;
+      column-gap: 59px;
     }
   }
 }
@@ -78,13 +79,17 @@ html {
     padding-bottom: 20px;
     &-text {
       color: #C4C4C4;
+      font-style: normal;
+      font-weight: 400;
+      font-size: 1.3rem;
+      line-height: 1;
     }
   }
 
   &-title {
     font-style: normal;
     font-weight: 350;
-    font-size: 3.2rem;
+    font-size: 5.5rem;
     line-height: 1;
     color: $dark;
     padding-top: 20px;
@@ -98,18 +103,18 @@ html {
     &-cont {
       font-style: normal;
       color: $white;
-      padding: 23px 83px 23px 83px;
+      padding: 23px 10.3rem 23px 23.7rem;
     }
 
     &-text {
       font-weight: 400;
-      font-size: 1.4rem;
+      font-size: 2.5rem;
       line-height: 1;
     }
 
     &-boldText {
       font-weight: 700;
-      font-size: 2.1rem;
+      font-size: 3.7rem;
       line-height: 1.5;
     }
   }
@@ -121,7 +126,7 @@ html {
     border-radius: 3px;
     padding: 15px 20px;
     font-weight: 400;
-    font-size: 1.3rem;
+    font-size: 2.2rem;
     line-height: 1;
     text-transform: uppercase;
     color: $white;
@@ -137,7 +142,7 @@ html {
     &-title {
       padding-bottom: 40px;
       font-weight: 350;
-      font-size: 2.8rem;
+      font-size: 5rem;
       line-height: 1;
       color: $dark;
       text-align: center;
@@ -148,29 +153,15 @@ html {
       color: $dark;
       display: flex;
       flex-direction: column;
-      padding-bottom: 32px;
-      row-gap: 35px;
-    }
-  }
-
-  .pros-item {
-    &-header {
-      font-weight: 500;
-      font-size: 1.8rem;
-      line-height: 1.5;
-    }
-
-    &-text {
-      font-weight: 350;
-      font-size: 1.4rem;
-      line-height: 1.6;
+      padding-bottom: 2.5rem;
+      row-gap: 4.4rem;
     }
   }
 
   &-bonuses {
     background-color: #000E2C;
-    padding-bottom: 30px;
-    padding-top: 30px;
+    padding-bottom: 3.7rem;
+    padding-top: 3.7rem;
 
     &-container {
       display: flex;
@@ -179,18 +170,18 @@ html {
     &-content {
       display: flex;
       flex-direction: column;
-      row-gap: 29px;
+      row-gap: 3.6rem;
     }
 
     &-title {
       font-weight: 700;
-      font-size: 1.4rem;
+      font-size: 2.5rem;
       line-height: 2;
       color: $white;
 
       &-main {
         font-weight: 350;
-        font-size: 2.8rem;
+        font-size: 5rem;
         line-height: 2;
       }
     }
@@ -198,7 +189,7 @@ html {
     &-img {
       position: relative;
       left: -5%;
-      top: 30px;
+      top: 6.25rem;
       z-index: 2;
       object-fit: contain;
     }
@@ -209,7 +200,7 @@ html {
     padding-top: 30px;
     &-title {
       font-weight: 350;
-      font-size: 2.8rem;
+      font-size: 5rem;
       line-height: 1;
       color: $dark;
       padding-bottom: 30px;
@@ -228,36 +219,53 @@ html {
   &-list {
     &-list {
       font-weight: 350;
-      font-size: 1.4rem;
+      font-size: 2.5rem;
       line-height: 1.6;
       display: flex;
       flex-direction: column;
-      row-gap: 29px;
+      row-gap: 3.6rem;
     }
 
     &-item {
       color: $white;
+      width: 84.2rem
     }
   }
 
   &-look {
     &-href {
       font-weight: 350;
-      font-size: 1.1rem;
+      font-size: 1.9rem;
       line-height: 1.1;
       color: #01C2FF;
     }
   }
 }
 
-.content-block {
-  &-text {
-    font-size: 1.4rem;
-    line-height: 1.6;
-    padding-top: 44px;
+.pros-item {
+  &-header {
+    font-weight: 500;
+    font-size: 3.1rem;
+    line-height: 1.5;
   }
+
+  &-text {
+    font-weight: 350;
+    font-size: 2.5rem;
+    line-height: 1.6;
+  }
+}
+
+.content-block {
+  padding-top: 44px;
+  padding-bottom: 20px;
+  width: 49.2rem;
+  font-size: 2.5rem;
+  line-height: 1.6;
   &-img {
     object-fit: contain;
+    position: relative;
+    bottom: 6.2rem;
   }
 }
 
@@ -266,6 +274,10 @@ html {
   height: 1px;
   border: 1px solid #D9D9D9;
   margin-bottom: 30px;
+}
+
+.cases-gallery-item {
+  object-fit: contain;
 }
 
 .swiper-arrows {
