--- a/src/scss/all-pages/header.scss
+++ b/src/scss/all-pages/header.scss
@@ -6,11 +6,12 @@ header{
     font-size: 2.25rem;
     display: grid;
     padding: 2rem $paddingLeft;
-    grid-template-columns: 1fr 3fr 1fr;
+    grid-template-columns: 1.5fr 8.3fr 2.2fr;
     background-color: $white;
     .header-logo{
+        padding-top: 11px;
         img{
-            width: 20rem;
+            width: 16.4rem;
             height: 100%;
         }
     }
@@ -18,7 +19,7 @@ header{
         display: flex;
         justify-content: space-around;
         align-items: center;
-        gap: 3rem;
+        gap: 5.6rem;
         &-item{
             display: flex;
             justify-content: center;
@@ -30,6 +31,7 @@ header{
         display: flex;
         align-items: center;
         justify-content: center;
+        color: $cyan;
         &-icon{
            height: 3rem;
         }
@@ -44,5 +46,13 @@ header{
     .header-menu-item-arrow{
         padding-left: 2rem;
     }
-
 }
+
+.header-line {
+    width: 100%;
+    height: 1px;
+    border: 1px solid #D9D9D9;
+    margin-top: 14px;
+    margin-bottom: 20px;
+}
+
