--- a/src/scss/all-pages/header.scss
+++ b/src/scss/all-pages/header.scss
@@ -50,8 +50,20 @@ header{
 
 .header-line {
     width: 100%;
-    height: 1px;
-    border: 1px solid #D9D9D9;
-    margin-top: 14px;
+    height: 0.1rem;
+    border: 0.1rem solid #d9d9d9;
+    margin-top: 1.75rem;
 }
 
+@media (max-width : 1280px){
+    html {
+        font-size: 8px;
+    }
+
+}
+
+@media (max-width : 400px) {
+    html {
+        font-size: 4px;
+    }
+}
