--- a/src/scss/internet-shops.scss
+++ b/src/scss/internet-shops.scss
@@ -1,13 +1,6 @@
-
 @import "utils/typography";
 @import "utils/vars";
 @import "fonts";
-
-
-//TODO не подключаются шрифты
-//TODO нужно ли в этот файл подключать файл vars.scss?
-
-
 
 * {
   margin: 0;
@@ -53,8 +46,8 @@
 
 .page {
   &-breadcrumbs {
-    padding-top: 15px;
-    padding-bottom: 20px;
+    padding-top: 1.8rem;
+    padding-bottom: 2.5rem;
     &-text {
       color: #C4C4C4;
       font-style: normal;
@@ -70,8 +63,8 @@
     font-size: 5.5rem;
     line-height: 1;
     color: $dark;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding-top: 2.5rem;
+    padding-bottom: 2.5rem;
   }
 
   &-header {
@@ -106,18 +99,18 @@
   }
 
   &-blueBtn {
-    width: 208px;
-    height: 54px;
+    width: 26rem;
+    height: 6.7rem;
     background-color: #01C2FF;
     border-radius: 3px;
-    padding: 15px 20px;
+    padding: 1.8rem 2.5rem;
     font-weight: 400;
     font-size: 2.2rem;
     line-height: 1;
     text-transform: uppercase;
     color: $white;
-    margin-top: 23px;
-    margin-bottom: 23px;
+    margin-top: 2.8rem;
+    margin-bottom: 2.8rem;
   }
 
   &-pros {
@@ -126,7 +119,7 @@
     grid-template-rows: repeat(2, auto);
 
     &-title {
-      padding-bottom: 40px;
+      padding-bottom: 5rem;
       font-weight: 350;
       font-size: 5rem;
       line-height: 1;
@@ -176,7 +169,7 @@
     &-img {
       position: relative;
       left: -5%;
-      top: 5.5rem;
+      top: 0.1rem;
       object-fit: contain;
     }
   }
@@ -196,14 +189,15 @@
   }
 
   &-cases {
-    padding-bottom: 30px;
-    padding-top: 30px;
+    padding-bottom: 3.7rem;
+    padding-top: 3.7rem;
     &-title {
       font-weight: 350;
       font-size: 5rem;
       line-height: 1;
       color: $dark;
-      padding-bottom: 30px;
+      padding-bottom: 3.7rem;
+      padding-top: 30px;
     }
     &-gallery {
       display: flex;
@@ -212,8 +206,8 @@
     }
     &-swiper {
       display: flex;
-      column-gap: 19px;
-      padding-top: 30px;
+      column-gap: 2.3rem;
+      padding-top: 3.7rem;
     }
   }
 
@@ -242,14 +236,15 @@
   &-content {
     font-weight: 350;
     color: $dark;
-    padding-top: 32px;
+    padding-top: 4rem;
     &-header {
       font-size: 8.75rem;
       line-height: 1;
+      //padding-top: 4.8rem;
     }
     &-block {
       display: flex;
-      column-gap: 59px;
+      column-gap: 7.4rem;
     }
   }
 }
@@ -269,12 +264,12 @@
 }
 
 .content-block {
-  padding-top: 44px;
-  padding-bottom: 20px;
+  padding-top: 5.5rem;
+  padding-bottom: 2.5rem;
   width: 49.2rem;
   display: flex;
   flex-direction: column;
-  row-gap: 20px;
+  row-gap: 2.5rem;
   &-text {
     font-size: 2.5rem;
     line-height: 1.6;
@@ -291,7 +286,7 @@
   width: 100%;
   height: 1px;
   border: 1px solid #D9D9D9;
-  margin-bottom: 30px;
+  margin-bottom: 3.75rem;
 }
 
 .cases-gallery-item {
@@ -301,5 +296,68 @@
 
 .swiper-arrows {
   display: flex;
-  column-gap: 19px;
+  column-gap: 2.4rem;
+}
+
+
+
+@media (max-width : 1280px){
+  html {
+    font-size: 6px;
+  }
+
+  .container {
+    max-width: 1024px;
+    padding: 0 20px;
+  }
+
+  .page {
+    &-breadcrumbs {
+      padding-top: 1.8rem;
+      padding-bottom: 2.5rem;
+    }
+
+    &-title {
+      padding-top: 2.5rem;
+      padding-bottom: 2.5rem;
+    }
+
+    &-bonuses {
+      &-content {
+      }
+
+      &-img {
+        width: 83.7rem;
+        top: 8.5rem;
+      }
+    }
+  }
+
+  .internet {
+    &-content {
+      &-header {
+        padding-top: 8.5rem;
+      }
+      &-block {
+        column-gap: 4.3rem;
+      }
+    }
+  }
+
+  .content-block {
+    width: 79.3rem;
+    &-img {
+      width: 80.3rem;
+    }
+  }
+
+  .cases-gallery-item {
+    width: 52.5rem
+  }
+}
+
+@media (max-width : 400px) {
+  html {
+    font-size: 4px;
+  }
 }
