--- a/src/scss/utils/typography.scss
+++ b/src/scss/utils/typography.scss
@@ -11,6 +11,12 @@ html {
   }
 }
 
+@media (min-width : 800px){
+  html {
+    font-size: 6px;
+  }
+}
+
 *{
   font-size: 2rem;
   box-sizing: border-box;
