--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,6 +3,7 @@
 @import 'utils/typography';
 @import 'all-pages/header';
 @import 'all-pages/footer';
+@import 'all-pages/prefooter';
 @import 'libs/swiper';
 body{
     // background-color: rgba(0, 0, 0, 0.376);
