--- a/src/scss/internet-shops.scss
+++ b/src/scss/internet-shops.scss
@@ -48,6 +48,8 @@
   &-breadcrumbs {
     padding-top: 1.8rem;
     padding-bottom: 2.5rem;
+    border-top: 0.1rem solid #d9d9d9;
+    margin-top: 1.75rem;
     &-text {
       color: #C4C4C4;
       font-style: normal;
@@ -80,9 +82,7 @@
     &-cont {
       font-style: normal;
       color: $white;
-      padding-top: 2.5rem;
-      padding-bottom: 2rem;
-      //padding: 23px 10.3rem 23px 23.7rem;
+      align-self: center;
     }
 
     &-text {
@@ -109,8 +109,7 @@
     line-height: 1;
     text-transform: uppercase;
     color: $white;
-    margin-top: 2.8rem;
-    margin-bottom: 2.8rem;
+    align-self: center;
   }
 
   &-pros {
@@ -237,6 +236,8 @@
     font-weight: 350;
     color: $dark;
     padding-top: 4rem;
+    margin-bottom: 3.75rem;
+    border-bottom: 0.1rem solid #d9d9d9;
     &-header {
       font-size: 8.75rem;
       line-height: 1;
@@ -280,13 +281,6 @@
     bottom: 7.5rem;
     right: 1.8rem;
   }
-}
-
-.line {
-  width: 100%;
-  height: 1px;
-  border: 1px solid #D9D9D9;
-  margin-bottom: 3.75rem;
 }
 
 .cases-gallery-item {
