--- a/src/scss/internet-shops.scss
+++ b/src/scss/internet-shops.scss
@@ -73,11 +73,12 @@
     display: grid;
     background-image: url("../img/internet-shops/background-header.png");
     background-size: cover;
-    grid-template-columns: 4fr 8fr;
-    column-gap: 27.5rem;
+    grid-template-columns: 1fr 1fr;
+    height: 99px;
     &-block {
       display: flex;
       column-gap: 10.4rem;
+      height: 99px;
     }
     &-cont {
       font-style: normal;
@@ -218,6 +219,10 @@
   }
 }
 
+.vector-btn {
+  display: none;
+}
+
 .list-item-text {
   font-weight: 350;
   font-size: 2.5rem;
@@ -226,7 +231,7 @@
 
 .scissors-img {
   position: relative;
-  left: 46%;
+  left: 33%;
 }
 
 .internet {
@@ -236,6 +241,9 @@
     padding-top: 4rem;
     margin-bottom: 3.75rem;
     border-bottom: 0.1rem solid #d9d9d9;
+    position: relative;
+    z-index: 2;
+    background-color: $white;
     &-header {
       font-size: 8.75rem;
       line-height: 1;
@@ -314,6 +322,10 @@
       padding-bottom: 2.5rem;
     }
 
+    &-header {
+      background-position-x: center;
+    }
+
     &-bonuses {
       &-content {
       }
@@ -322,6 +334,12 @@
         width: 83.7rem;
       }
     }
+  }
+
+  .scissors-img {
+    position: relative;
+    left: 6%;
+    height: min-content;
   }
 
   .internet {
@@ -362,6 +380,12 @@
 }
 
 @media (max-width : 860px) {
+  .container {
+    max-width: 860px;
+    padding: 0 16px;
+  }
+
+
   .page {
     &-bonuses {
       &-img {
@@ -371,14 +395,77 @@
       }
     }
   }
+
+  .scissors-img {
+    position: relative;
+    left: -10%;
+    height: 25rem;
+    width: max-content;
+  }
 }
 
 @media (max-width : 690px) {
+  .container {
+    max-width: 690px;
+    padding: 0 16px;
+  }
+
   html {
     font-size: 4px;
+  }
+
+  .page {
+    &-header {
+      display: flex;
+      justify-content: space-evenly;
+      &-block {
+        display: flex;
+        flex-direction: column;
+        align-self: center;
+        column-gap: 0;
+        row-gap: 2.2rem;
+        padding: 4rem 4.7rem;
+        justify-content: space-between;
+      }
+    }
+
+    &-blueBtn {
+      width: 48.4rem;
+      height: 10.7rem;
+      background-color: transparent;
+      border-radius: 0;
+      font-size: 3.7rem;
+      text-transform: none;
+      color: $cyan;
+      align-self: center;
+      display: flex;
+      justify-content: center;
+      column-gap: 1rem;
+    }
+  }
+
+  .svg-vector-btn {
+    display: none;
+  }
+
+  .vector-btn {
+    display: block;
+    color: $cyan;
+    font-weight: 400;
+    font-size: 3.7rem;
   }
 }
 
 @media (max-width : 400px) {
+  .container {
+    max-width: 400px;
+    padding: 0 10px;
+  }
 
+  .page {
+    &-title {
+      font-size: 8.75rem;
+      text-align: center;
+    }
+  }
 }
