--- a/src/scss/internet-shops.scss
+++ b/src/scss/internet-shops.scss
@@ -70,11 +70,12 @@
   }
 
   &-header {
-    display: grid;
+    display: flex;
+    column-gap: 5.4rem;
     background-image: url("../img/internet-shops/background-header.png");
     background-size: cover;
-    grid-template-columns: 1fr 1fr;
     height: 99px;
+    justify-content: space-evenly;
     &-block {
       display: flex;
       column-gap: 10.4rem;
@@ -230,8 +231,8 @@
 }
 
 .scissors-img {
-  position: relative;
-  left: 33%;
+  //position: relative;
+  //left: 33%;
 }
 
 .internet {
@@ -324,6 +325,7 @@
 
     &-header {
       background-position-x: center;
+      justify-content: normal;
     }
 
     &-bonuses {
@@ -337,15 +339,15 @@
   }
 
   .scissors-img {
-    position: relative;
-    left: 6%;
+    //position: relative;
+    //left: 6%;
     height: min-content;
   }
 
   .internet {
     &-content {
+      padding-top: 8.5rem;
       &-header {
-        padding-top: 8.5rem;
       }
       &-block {
         column-gap: 4.3rem;
@@ -356,7 +358,11 @@
   .content-block {
     width: 79.3rem;
     &-img {
-      width: 80.3rem;
+      width: 72.3rem;
+      position: relative;
+      bottom: 4.5rem;
+      right: 0;
+      left: -12.3rem;
     }
   }
 
@@ -402,6 +408,17 @@
     height: 25rem;
     width: max-content;
   }
+
+  .content-block {
+    width: 79.3rem;
+    &-img {
+      width: 80.3rem;
+      position: relative;
+      bottom: 7.5rem;
+      right: 0;
+      left: -10.3rem;
+    }
+  }
 }
 
 @media (max-width : 690px) {
@@ -442,6 +459,12 @@
       justify-content: center;
       column-gap: 1rem;
     }
+
+    &-bonuses {
+      &-img {
+        display: none;
+      }
+    }
   }
 
   .svg-vector-btn {
@@ -454,6 +477,26 @@
     font-weight: 400;
     font-size: 3.7rem;
   }
+
+  .internet {
+    &-content {
+      &-header {
+        font-size: 11.2rem;
+        text-align: center;
+      }
+      &-block {
+        flex-direction: column-reverse;
+        padding-top: 4rem;
+      }
+    }
+  }
+
+  .content-block-text {
+    font-size: 4.5rem;
+  }
+
+
+
 }
 
 @media (max-width : 400px) {
