--- a/src/scss/all-pages/header.scss
+++ b/src/scss/all-pages/header.scss
@@ -12,6 +12,7 @@ header{
     background-color: $white;
     .header-logo{
         padding-top: 11px;
+        padding-bottom: 1.7rem;
         img{
             width: 16.4rem;
             height: 100%;
