--- a/src/scss/development.scss
+++ b/src/scss/development.scss
@@ -20,6 +20,12 @@
     height: 0.9rem;
     margin: 0 3.1rem 0 3.1rem;
   }
+  &-arrow-slider {
+    width: 24px;
+    height: 24px;
+    position: relative;
+    bottom: 0.4em;
+  }
 }
 
 .container {
@@ -101,7 +107,7 @@
         font-weight: 700;
         font-size: 8.7rem;
         line-height: 1;
-        padding-bottom: 4.8rem;
+        padding-bottom: 5.8rem;
         color:$black;
         //text-border:
         text-shadow:0 1px 0 rgb(255,255,255),0px -1px 0 rgb(255,255,255),1px 0px 0 rgb(255,255,255),-1px 0px 0 rgb(255,255,255),1px 1px 0 rgb(255,255,255),1px -1px 0 rgb(255,255,255),-1px 1px 0 rgb(255,255,255),-1px -1px 0 rgb(255,255,255),0px 1.5px 0 rgb(255,255,255),0px -1.5px 0 rgb(255,255,255),1.5px 0px 0 rgb(255,255,255),-1.5px 0px 0 rgb(255,255,255),1.5px 1.5px 0 rgb(255,255,255),1.5px -1.5px 0 rgb(255,255,255),-1.5px 1.5px 0 rgb(255,255,255),-1.5px -1.5px 0 rgb(255,255,255);
@@ -210,6 +216,7 @@
     border-top: 0.1rem solid #d9d9d9;
     &-container {
       padding-top: 30px;
+      padding-bottom: 30px;
       display: grid;
       grid-template-columns: repeat(5, 20%);
       grid-template-rows: repeat(2, auto);
@@ -235,6 +242,80 @@
     }
 
   }
+
+  &-bonuses {
+    padding-top: 11.5rem;
+    padding-bottom: 3.75rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    row-gap: 3.6rem;
+    color: $dark;
+    &-title {
+      &-main {
+        font-weight: 350;
+        font-size: 5rem;
+        line-height: 1;
+        text-align: center;
+      }
+      &-second {
+        font-weight: 700;
+        font-size: 2.5rem;
+        line-height: 1.6;
+      }
+    }
+  }
+
+  &-list {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    row-gap: 3.6rem;
+    position: relative;
+    left: 30%;
+    &-item {
+      display: flex;
+      column-gap: 1.7rem;
+    }
+  }
+
+  &-cases {
+    padding-bottom: 3.7rem;
+    padding-top: 3.7rem;
+    &-title {
+      font-weight: 350;
+      font-size: 5rem;
+      line-height: 1;
+      color: $dark;
+      padding-bottom: 3.7rem;
+      padding-top: 30px;
+    }
+    &-gallery {
+      display: flex;
+      justify-content: space-between;
+      column-gap: 2.7rem;
+    }
+    &-swiper {
+      display: flex;
+      column-gap: 2.3rem;
+      padding-top: 3.7rem;
+    }
+  }
+
+  &-look {
+    &-href {
+      font-weight: 350;
+      font-size: 1.9rem;
+      line-height: 1.1;
+      color: #01C2FF;
+    }
+  }
+}
+
+.list-item-text {
+  font-weight: 350;
+  font-size: 2.5rem;
+  line-height: 1.6;
 }
 
 .pros {
@@ -256,4 +337,14 @@
 
 .vector-btn {
   display: none;
+}
+
+.cases-gallery-item {
+  object-fit: contain;
+  width: 33%;
+}
+
+.swiper-arrows {
+  display: flex;
+  column-gap: 2.4rem;
 }
