1C-integration. Added styles for this page. But adjustments needed. Development: correctet font-sizes and corrected design whith PixelPerfect

--- a/src/scss/all-pages/prefooter.scss
+++ b/src/scss/all-pages/prefooter.scss
@@ -63,7 +63,7 @@
 }
 
 .bitrix-gallery {
-  padding-top: 3.75px;
+  padding-top: 3.75rem;
   padding-bottom: 3.75rem;
   &-container {
     display: flex;
