forst-screen.scss: added margin-top 1.6rem in class .first-screen-inner

--- a/src/scss/pages/home/first-screen.scss
+++ b/src/scss/pages/home/first-screen.scss
@@ -6,6 +6,7 @@
     padding: 2rem $paddingLeft;
     display: flex;
     justify-content: center;
+    margin-top: 1.6rem;
   }
   &-wrapper {
     @include widthContainer;
