--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -6,4 +6,5 @@
 @import "pages/home/fifth-screen";
 @import "pages/home/sixth-screen";
 @import "pages/home/services";
-@import "pages/home/prefooter";
+@import "all-pages/prefooter";
+@import "all-pages/prefooter-gallery";
