--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4,6 +4,7 @@
 @import 'all-pages/header';
 @import 'all-pages/footer';
 @import 'all-pages/prefooter';
+@import 'all-pages/prefooter-gallery';
 @import 'libs/swiper';
 body{
     // background-color: rgba(0, 0, 0, 0.376);
