--- a/src/scss/all-pages/header.scss
+++ b/src/scss/all-pages/header.scss
@@ -1,5 +1,11 @@
 @import "dropdown";
 
+.header {
+    background-color: $white;
+    position: relative;
+    z-index: 5;
+}
+
 header{
     @include widthContainer;
     margin: 0 auto;
