--- a/src/scss/all-pages/header.scss
+++ b/src/scss/all-pages/header.scss
@@ -1,4 +1,7 @@
 @import "dropdown";
+@import "../utils/typography";
+@import "../utils/vars";
+@import "../fonts";
 
 .header {
     background-color: $white;
@@ -35,6 +38,7 @@ header{
             align-items: center;
             list-style-type: none;
             cursor:pointer;
+            font-size: 2.25rem;
         }
     }
     .header-phone{
