--- a/src/scss/1C-integration.scss
+++ b/src/scss/1C-integration.scss
@@ -8,18 +8,12 @@
 }
 
 .svg-sprites {
-  position: absolute;
-  visibility: hidden;
-  width: 0;
-  height: 0;
+  @include svg-sprites;
 }
 
 .svg {
   &-arrowBread {
-    color: #BBBBBB;
-    width: 1rem;
-    height: 0.9rem;
-    margin: 0 3.1rem 0 3.1rem;
+    @include svg-arrowBread;
   }
   &-arrow-slider {
     width: 24px;
@@ -41,16 +35,10 @@
 
 .page {
   &-breadcrumbs {
-    padding-top: 1.8rem;
-    padding-bottom: 2.5rem;
-    border-top: 0.1rem solid #d9d9d9;
+    @include breadcrumbs;
 
     &-text {
-      color: #C4C4C4;
-      font-style: normal;
-      font-weight: 400;
-      font-size: 1.3rem;
-      line-height: 1;
+      @include breadcrumbs-text;
     }
   }
 
@@ -111,6 +99,7 @@
       grid-template-columns: repeat(4, 38.1rem);
       grid-template-rows: repeat(2, auto);
       column-gap: 2.5rem;
+      justify-content: center;
     }
 
     &-title {
@@ -125,12 +114,8 @@
     }
 
     &-item {
-      color: $dark;
-      display: flex;
-      flex-direction: column;
-      row-gap: 3.8rem;
+      @include page-pros-item;
     }
-
   }
 }
 
@@ -196,17 +181,12 @@
   }
 }
 
-.pros {
-  &-item {
-    &-header {
-      font-weight: 500;
-      font-size: 3.1rem;
-      line-height: 1.2;
-    }
-    &-text {
-      font-weight: 350;
-      font-size: 2.5rem;
-      line-height: 1.6;
-    }
+.pros-item {
+  &-header {
+    @include pros-item-header;
+  }
+
+  &-text {
+    @include pros-item-text;
   }
 }
