--- a/src/scss/development.scss
+++ b/src/scss/development.scss
@@ -9,16 +9,10 @@
 
 .svg {
   &-sprites {
-    position: absolute;
-    visibility: hidden;
-    width: 0;
-    height: 0;
+    @include svg-sprites;
   }
   &-arrowBread {
-    color: #BBBBBB;
-    width: 1rem;
-    height: 0.9rem;
-    margin: 0 3.1rem 0 3.1rem;
+    @include svg-arrowBread;
   }
   &-arrow-slider {
     width: 24px;
@@ -35,8 +29,6 @@
 }
 
 .development {
-  font-family: 'UZ Sans', sans-serif;
-  font-size: 8px;
   &-content {
     color: $dark;
     background-image: url("../img/development/magic_stick.png");
@@ -145,16 +137,9 @@
 
 .page {
   &-breadcrumbs {
-    padding-top: 1.8rem;
-    padding-bottom: 2.5rem;
-    border-top: 0.1rem solid #d9d9d9;
-
+    @include breadcrumbs;
     &-text {
-      color: #C4C4C4;
-      font-style: normal;
-      font-weight: 400;
-      font-size: 1.3rem;
-      line-height: 1;
+      @include breadcrumbs-text;
     }
     &-arrow {
       color: #BBBBBB;
@@ -241,15 +226,9 @@
       text-align: center;
       grid-area: 1 / 1 / 2 / 7;
     }
-
     &-item {
-      color: $dark;
-      display: flex;
-      flex-direction: column;
-      padding-bottom: 2.5rem;
-      row-gap: 3.8rem;
+      @include page-pros-item;
     }
-
   }
 
   &-bonuses {
@@ -333,30 +312,29 @@
 .pros {
   &-item {
     &-header {
-      font-weight: 500;
-      font-size: 3.1rem;
+      @include pros-item-header;
     }
+
     &-text {
-      font-weight: 350;
-      font-size: 2.5rem;
+      @include pros-item-text;
     }
   }
 }
 
 .scissors-img {
-  filter: hue-rotate(21deg);
-}
+    filter: hue-rotate(21deg);
+  }
 
 .vector-btn {
-  display: none;
-}
+    display: none;
+  }
 
 .cases-gallery-item {
-  object-fit: contain;
-  width: 33%;
-}
+    object-fit: contain;
+    width: 33%;
+  }
 
 .swiper-arrows {
-  display: flex;
-  column-gap: 2.4rem;
-}
+    display: flex;
+    column-gap: 2.4rem;
+  }
