--- a/src/scss/internet-shops.scss
+++ b/src/scss/internet-shops.scss
@@ -15,17 +15,11 @@
 
 .svg {
   &-sprites {
-    position: absolute;
-    visibility: hidden;
-    width: 0;
-    height: 0;
+    @include svg-sprites;
   }
 
   &-arrowBread {
-    color: #BBBBBB;
-    width: 1rem;
-    height: 0.9rem;
-    margin: 0 3.1rem 0 3.1rem;
+    @include svg-arrowBread;
   }
 
   &-arrow-slider {
@@ -42,15 +36,9 @@
 
 .page {
   &-breadcrumbs {
-    padding-top: 1.8rem;
-    padding-bottom: 2.5rem;
-    border-top: 0.1rem solid #d9d9d9;
+    @include breadcrumbs;
     &-text {
-      color: #C4C4C4;
-      font-style: normal;
-      font-weight: 400;
-      font-size: 1.3rem;
-      line-height: 1;
+      @include breadcrumbs-text;
     }
   }
 
@@ -125,11 +113,7 @@
     }
 
     &-item {
-      color: $dark;
-      display: flex;
-      flex-direction: column;
-      padding-bottom: 2.5rem;
-      row-gap: 3.8rem;
+      @include page-pros-item;
     }
   }
 
@@ -225,11 +209,6 @@
   line-height: 1.6;
 }
 
-.scissors-img {
-  //position: relative;
-  //left: 33%;
-}
-
 .internet {
   &-content {
     font-weight: 350;
@@ -254,15 +233,11 @@
 
 .pros-item {
   &-header {
-    font-weight: 500;
-    font-size: 3.1rem;
-    line-height: 1.5;
+    @include pros-item-header;
   }
 
   &-text {
-    font-weight: 350;
-    font-size: 2.5rem;
-    line-height: 1.6;
+    @include pros-item-text;
   }
 }
 
